Added more functionality but there are still some bugs and unfinished elements

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
             <button class="clear-entry">CE</button>
             <button class="clear">C</button>
             <button>Del</button>
-            <button class="right displayable">÷</button>
-            <button class="displayable">7</button>
-            <button class="displayable">8</button>
-            <button class="displayable">9</button>
-            <button class="right displayable">×</button>
-            <button class="displayable">4</button>
-            <button class="displayable">5</button>
-            <button class="displayable">6</button>
-            <button class="right displayable">−</button>
-            <button class="displayable">1</button>
-            <button class="displayable">2</button>
-            <button class="displayable">3</button>
-            <button class="right">+</button>
+            <button class="operators">÷</button>
+            <button class="digit">7</button>
+            <button class="digit">8</button>
+            <button class="digit">9</button>
+            <button class="operators">×</button>
+            <button class="digit">4</button>
+            <button class="digit">5</button>
+            <button class="digit">6</button>
+            <button class="operators">−</button>
+            <button class="digit">1</button>
+            <button class="digit">2</button>
+            <button class="digit">3</button>
+            <button class="operators">+</button>
             <button>+/−</button>
-            <button class="displayable">0</button>
-            <button class="displayable">.</button>
+            <button class="digit">0</button>
+            <button class="digit">.</button>
             <button class="equal">=</button>
         </div>
     <div class="bottom"></div>
