Calculator is almost done. Keyboard support is missing and signs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="display">0</div>
             <button class="clear-entry">CE</button>
             <button class="clear">C</button>
-            <button>Del</button>
+            <button class="backspace">Del</button>
             <button class="operators">÷</button>
             <button class="digit">7</button>
             <button class="digit">8</button>
@@ -35,9 +35,9 @@
             <button class="digit">2</button>
             <button class="digit">3</button>
             <button class="operators">+</button>
-            <button>+/−</button>
+            <button class="sign">+/−</button>
             <button class="digit">0</button>
-            <button class="digit">.</button>
+            <button class="decimal">.</button>
             <button class="equal">=</button>
         </div>
     <div class="bottom"></div>
