Completed all functionalities except keyboard support. Will be added next time.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
                 ZARO
             </div>
             <div class="solarpanel">
-                <div class="tube">solarpanel</div>
+                <div class="tube"></div>
             </div>
         </div>
         <div class="grid">
         <div class="display">0</div>
-            <button class="clear-entry">CE</button>
             <button class="clear">C</button>
             <button class="backspace">Del</button>
-            <button class="operators">÷</button>
+            <button id="division" class="operators">÷</button>
             <button class="digit">7</button>
             <button class="digit">8</button>
             <button class="digit">9</button>
