Added keyboard support

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
         </div>
         <div class="grid">
         <div class="display">0</div>
-            <button class="clear">C</button>
-            <button class="backspace">Del</button>
-            <button id="division" class="operators">÷</button>
-            <button class="digit">7</button>
-            <button class="digit">8</button>
-            <button class="digit">9</button>
-            <button class="operators">×</button>
-            <button class="digit">4</button>
-            <button class="digit">5</button>
-            <button class="digit">6</button>
-            <button class="operators">−</button>
-            <button class="digit">1</button>
-            <button class="digit">2</button>
-            <button class="digit">3</button>
-            <button class="operators">+</button>
-            <button class="sign">+/−</button>
-            <button class="digit">0</button>
-            <button class="decimal">.</button>
-            <button class="equal">=</button>
+            <button data-key="27" class="clear">C</button>
+            <button data-key="8" class="backspace">Del</button>
+            <button data-key="501" id="division" class="operators">÷</button>
+            <button data-key="55" class="digit">7</button>
+            <button data-key="56" class="digit">8</button>
+            <button data-key="57" class="digit">9</button>
+            <button data-key="500" class="operators">×</button>
+            <button data-key="52" class="digit">4</button>
+            <button data-key="53" class="digit">5</button>
+            <button data-key="54" class="digit">6</button>
+            <button data-key="173" class="operators">−</button>
+            <button data-key="49" class="digit">1</button>
+            <button data-key="50" class="digit">2</button>
+            <button data-key="51" class="digit">3</button>
+            <button data-key="171" class="operators">+</button>
+            <button data-key="18" class="sign">+/−</button>
+            <button data-key="48" class="digit">0</button>
+            <button data-key="190" class="decimal">.</button>
+            <button data-key="13" class="equal">=</button>
         </div>
     <div class="bottom"></div>
 </div>
-<script src="scripts/script.js" deter ></script>    
+<script src="scripts/script.js" defer ></script>    
 </body>
 </html>
